[package]
name = "btc-handshake"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "btc-handshake"
path = "src/bin/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"
thiserror = "1"
anyhow = "1"
futures = "0.3"
bitflags = "2.4.2"
rand = "0.8"
byteorder = "1.5.0"
sha2 = "0.10.8"
pretty-hex = "0.4.1"
