[package]
name = "btc-handshake"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "btc-handshake"
path = "src/bin/main.rs"

[dependencies]
anyhow = "1"
bitflags = "2.4.2"
byteorder = "1.5.0"
clap = { version = "4", features = ["derive"] }
futures = "0.3"
rand = "0.8"
sha2 = "0.10.8"
thiserror = "1"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"

[dev-dependencies]
quickcheck = "1.0.3"
quickcheck_macros = "1.0.0"
